# GraphicsLabProjectTemplate

./: .gitignore  CMakeLists.txt  manager.py
src/: main.cpp
